--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -83,7 +83,7 @@ deadlines:
     text: Deadline for proceedings paper submission
     pass_due: true
   - date: 2023-02-08
-    text: Author notificaiton for proceedings papers
+    text: Author notification for proceedings papers
     pass_due: false
   - date: 2023-02-19
     text: Deadline for camera-ready paper submission
